...
                        AppRoutes.inserisciCorso,
                      );
                    },
                  ),
                  ListTile(
                    title: const Text(
                      'Inserisci alloggio temporaneo',
                      textAlign: TextAlign.center,
                      style: TextStyle(
                        fontFamily: 'Poppins',
                        fontWeight: FontWeight.bold,
                      ),
                    ),
...
